--- a/Forecast2/DataPage.xaml
+++ b/Forecast2/DataPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="Forecast.DataPage"
+    x:Class="Forecast2.DataPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Forecast"
+    xmlns:local="using:Forecast2"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -25,7 +25,7 @@
             <Setter Property="FontWeight" Value="Bold"></Setter>
         </Style>
 
-        <converter:DateConverter xmlns:converter="using:Forecast" x:Key="DateConverter" />
+        <converter:DateConverter xmlns:converter="using:Forecast2" x:Key="DateConverter" />
     </Page.Resources>
 
     <Grid x:Name="LayoutRoot">
