--- a/Forecast2/MainPage.xaml
+++ b/Forecast2/MainPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="Forecast.MainPage"
+    x:Class="Forecast2.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Forecast"
+    xmlns:local="using:Forecast2"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -12,7 +12,7 @@
         <Style x:Key="PhoneTextNormalStyle" TargetType="TextBlock">
             <Setter Property="FontSize" Value="20" />
         </Style>
-        <converter:DateConverter xmlns:converter="using:Forecast" x:Key="DateConverter" />
+        <converter:DateConverter xmlns:converter="using:Forecast2" x:Key="DateConverter" />
 
 
         <Style x:Key="PhoneTextNormalStyleDate" TargetType="TextBlock">
