--- a/Forecast2/DataPage.xaml
+++ b/Forecast2/DataPage.xaml
@@ -8,14 +8,6 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Page.BottomAppBar>
-        <CommandBar>
-            <CommandBar.PrimaryCommands>
-                <AppBarButton Label="Map&#xD;&#xA;" Icon="Map" Click="AppBarButton_Click"/>
-            </CommandBar.PrimaryCommands>
-        </CommandBar>
-    </Page.BottomAppBar>
-
     <Page.Resources>
         <Style x:Key="PhoneTextNormalStyle" TargetType="TextBlock">
             <Setter Property="FontWeight" Value="SemiBold"></Setter>
@@ -64,9 +56,9 @@
         <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
             <ProgressBar IsIndeterminate="true" Visibility="Collapsed" Name="pbWeather" />
             <StackPanel Name="spWeatherInfo" Margin="0,0,0,-193">
-
+                
                 <StackPanel Orientation="Horizontal" Margin="0,0,-0.333,0">
-
+                    <Image Source="Images/place.png" Height="30" Width="30"/>
                     <TextBlock Margin="4"  Text="{Binding city.name}" Style="{StaticResource PhoneTextNormalStyleTitle}"/>
                     <TextBlock Margin="4" Text="{Binding city.country}" Style="{StaticResource PhoneTextNormalStyleTitle}" />
 
@@ -77,23 +69,29 @@
                         <DataTemplate>
                             <StackPanel Margin="8" Background="{x:Null}" Opacity="1" >
                                 <StackPanel Orientation="Horizontal" Margin="2">
+                                    
                                     <TextBlock Style="{StaticResource PhoneTextNormalStyleDate}" Text="{Binding dt, Converter={StaticResource DateConverter}}"  Margin="2" />
                                 </StackPanel>
 
                                 <StackPanel Orientation="Horizontal" Margin="2">
-
+                                    <Image Source="Images/arrow.png" Height="15" Width="30"/>
                                     <TextBlock Style="{StaticResource PhoneTextNormalStyleWeather}" Text="{Binding weather[0].main}" Margin="2" />
                                     <TextBlock Text=":" Margin="5,0,5,0" Style="{StaticResource PhoneTextNormalStyleWeather}"/>
                                     <TextBlock Style="{StaticResource PhoneTextNormalStyleWeatherDesc}" Text="{Binding weather[0].description}" Margin="2" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal" Margin="2">
+                                    <!--<Image Source="/Images/1050_7.png" />-->
+                                    <Image Source="Images/temp.png" Height="30" Width="30"/>
                                     <TextBlock Style="{StaticResource PhoneTextNormalStyle}" Margin="2">
+                                        
                         				<Run Text="Day temperature:"/>
                                     </TextBlock>
+                                    
                                     <TextBlock Style="{StaticResource PhoneTextNormalStyle}" Margin="2" Text="{Binding temp.day}" />
                                     <!--<TextBlock Style="{StaticResource PhoneTextNormalStyle}" Text="°C" Margin="0,0,0,0" />-->
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal" Margin="2">
+                                    <Image Source="Images/temp.png" Height="30" Width="30"/>
                                     <TextBlock Style="{StaticResource PhoneTextNormalStyle}" Margin="2">
                         				<Run Text="Night temperature:"/>
                                     </TextBlock>
@@ -101,6 +99,7 @@
                                     <!--<TextBlock Style="{StaticResource PhoneTextNormalStyle}" Text="°C" Margin="0,0,0,0" />-->
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal" Margin="2">
+                                    <Image Source="Images/temp.png" Height="30" Width="30"/>
                                     <TextBlock Style="{StaticResource PhoneTextNormalStyle}" Margin="2">
                         				<Run Text="Minimum temperature:"/>
                                     </TextBlock>
@@ -108,6 +107,7 @@
                                     <!--<TextBlock Style="{StaticResource PhoneTextNormalStyle}" Text="°C" Margin="0,0,0,0" />-->
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal" Margin="2">
+                                    <Image Source="Images/temp.png" Height="30" Width="30"/>
                                     <TextBlock Style="{StaticResource PhoneTextNormalStyle}" Margin="2">
                         				<Run Text="Maximum temperature:"/>
                                     </TextBlock>
@@ -123,6 +123,7 @@
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
+                
 
             </StackPanel>
         </Grid>
