--- a/Forecast2/DataPage.xaml
+++ b/Forecast2/DataPage.xaml
@@ -6,13 +6,24 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    
+    >
+
+    <Page.BottomAppBar>
+        <CommandBar>
+            <CommandBar.PrimaryCommands>
+                <AppBarButton Label="Map1" Icon="Map" Click="AppBarButton_Click"/>
+                <AppBarButton Label="Map2" Icon="MapPin" Click="AppBarButton_Click_1"/>
+            </CommandBar.PrimaryCommands>
+        </CommandBar>
+    </Page.BottomAppBar>
+
 
     <Page.Resources>
         <Style x:Key="PhoneTextNormalStyle" TargetType="TextBlock">
             <Setter Property="FontWeight" Value="SemiBold"></Setter>
             <Setter Property="FontSize" Value="20" />
-            
+
         </Style>
         <Style x:Key="PhoneTextNormalStyleTitle" TargetType="TextBlock">
             <Setter Property="FontWeight" Value="SemiBold"></Setter>
@@ -31,6 +42,14 @@
 
         <converter:DateConverter xmlns:converter="using:Forecast2" x:Key="DateConverter" />
     </Page.Resources>
+    <Page.Background>
+        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="Black" Offset="0.142"/>
+            <GradientStop Color="#FF2D6580" Offset="0.617"/>
+        </LinearGradientBrush>
+    </Page.Background>
+
+
 
     <Grid x:Name="LayoutRoot">
 
@@ -51,13 +70,13 @@
             <TextBlock Text="the weather" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"/>
         </StackPanel>
 
-        
+
 
         <!-- Content -->
         <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
             <ProgressBar IsIndeterminate="true" Visibility="Collapsed" Name="pbWeather" />
             <StackPanel Name="spWeatherInfo" Margin="0,0,0,-193">
-                
+
                 <StackPanel Orientation="Horizontal" Margin="0,0,-0.333,0">
                     <Image Source="Images/place.png" Height="30" Width="30"/>
                     <TextBlock Margin="4"  Text="{Binding city.name}" Style="{StaticResource PhoneTextNormalStyleTitle}"/>
@@ -70,13 +89,14 @@
                         <DataTemplate>
                             <StackPanel Margin="8" Background="{x:Null}" Opacity="1" >
                                 <StackPanel Orientation="Horizontal" Margin="2">
-                                    
+
                                     <TextBlock Style="{StaticResource PhoneTextNormalStyleDate}" Text="{Binding dt, Converter={StaticResource DateConverter}}"  Margin="2" />
                                 </StackPanel>
 
                                 <StackPanel Orientation="Horizontal" Margin="2">
                                     <Image Source="Images/arrow.png" Height="15" Width="30"/>
                                     <TextBlock Style="{StaticResource PhoneTextNormalStyleWeather}" Text="{Binding weather[0].main}" Margin="2" />
+                                    
                                     <TextBlock Text=":" Margin="5,0,5,0" Style="{StaticResource PhoneTextNormalStyleWeather}"/>
                                     <TextBlock Style="{StaticResource PhoneTextNormalStyleWeatherDesc}" Text="{Binding weather[0].description}" Margin="2" />
                                 </StackPanel>
@@ -87,9 +107,10 @@
                                         
                         				<Run Text="Day temperature:"/>
                                     </TextBlock>
-                                    
+
                                     <TextBlock Style="{StaticResource PhoneTextNormalStyle}" Margin="2" Text="{Binding temp.day}" />
-                                    <!--<TextBlock Style="{StaticResource PhoneTextNormalStyle}" Text="°C" Margin="0,0,0,0" />-->
+                                    <TextBlock Style="{StaticResource PhoneTextNormalStyle}" Text="{Binding myList[1]}" Margin="0,0,0,0" />
+
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal" Margin="2">
                                     <Image Source="Images/temp.png" Height="30" Width="30"/>
@@ -124,7 +145,7 @@
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
-                
+
 
             </StackPanel>
         </Grid>
